Fix jumplist size for last time...

--- a/static/inventory.css
+++ b/static/inventory.css
@@ -227,7 +227,6 @@
 .typeJumpList {
     margin: 20px auto 0 auto;
     padding: 0 10px;
-    max-width: 80%;
     font-size: 0.9em;
     clear: both;
 
@@ -405,10 +404,6 @@ a#exportLinks:hover {
     .stats .statsGroup {
         padding: 0 4px;
     }
-    
-    .typeJumpList {
-        max-width: 90%;
-    }
 }
 
 @media (max-width: 500px) {
@@ -422,7 +417,6 @@ a#exportLinks:hover {
     }
     
     .typeJumpList {
-        max-width: none;
         padding: 0;
         margin: 0;
         margin-right: 5px;
